<resources>
    <string name="app_name">AC02 Taula periódica</string>
    <string name="EIName">Name:</string>
    <string name="EIAtomicMass">Atomic mass:</string>
    <string name="EINumber">Number:</string>
    <string name="favorite">Favorite</string>
    <string name="game">Game</string>
    <string name="filter">Filter</string>
    <string name="non_metal">Non Metal</string>
    <string name="noble_gas">Noble Gas</string>
    <string name="alkali">Alkali</string>
    <string name="alkaline">Alkaline</string>
    <string name="metalloid">Metalloid</string>
    <string name="post">Post</string>
    <string name="transition">Transition</string>
    <string name="lanthanoid">Lanthanoid</string>
    <string name="actinoid">Actinoid</string>
    <string name="no_category">No Category</string>
    <string name="periodic_table">Periodic Table</string>
    <string name="element_name">Element Name:</string>
    <string name="element_number">Element Number:</string>
    <string name="atomic_mass">Atomic Mass:</string>
    <string name="summary">Summary:</string>
    <string name="element_phase">Element Phase:</string>
    <string name="element_appearance">Element Appearance:</string>
    <string name="boiling_point_k">Boiling point (K):</string>
    <string name="category">Category:</string>
    <string name="density">Density:</string>
    <string name="discovered_by">Discovered by:</string>
    <string name="melting_point">Melting Point:</string>
    <string name="molar_heat_capacity">Molar heat capacity:</string>
    <string name="named_by">Named By:</string>
    <string name="table_period">Table Period:</string>
    <string name="x_position">X-Position:</string>
    <string name="y_position">Y-Position:</string>
    <string name="shells">Shells:</string>
    <string name="ionization_energies">Ionization Energies:</string>
    <string name="electronegativity_pauling">Electronegativity Pauling:</string>
    <string name="electron_affinity">Electron Affinity:</string>
    <string name="electron_configuration_semantic">Electron Configuration Semantic:</string>
    <string name="electron_configuration">Electron Configuration:</string>
    <string name="order_by">Order By</string>
    <string name="symbol">Symbol</string>
    <string name="number">Number</string>
    <string name="all_categories">All Categories</string>
    <string name="post_transition">Post-Transition</string>
    <string name="unknown">Unknown</string>
    <string name="gas">Gas</string>
    <string name="liquid">Liquid</string>
    <string name="solid">Solid</string>
    <string name="max">Max:</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="you_lost_the_game">You lost the game</string>
    <string name="lost_message">The element is %1$s and is in the %2$s phase\nFor more information click it.</string>
    <string name="all_phases">All Phases</string>
</resources>